syntax = "proto3";

package studyroom.reservation.v1;

import "reservation/reservation.proto";

// Reservation 서비스 정의
service ReservationService {
  // 예약 생성
  rpc CreateReservation (CreateReservationRequest) returns (CreateReservationResponse);
  // 특정 예약 조회
  rpc GetReservation (GetReservationRequest) returns (GetReservationResponse);
  // 예약 목록 조회
  rpc ListReservations (ListReservationsRequest) returns (ListReservationsResponse);
  // 예약 정보 업데이트
  rpc UpdateReservation (UpdateReservationRequest) returns (UpdateReservationResponse);
  // 예약 삭제 (소프트 삭제)
  rpc DeleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse);
}
